# Argus

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README.zh.md  docker-compose.core.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
argus_py/: __init__.py
argus_py/api/: __init__.py  app.py  auth.py  dependencies.py  errors.py  middleware.py  params.py  rate_limit.py  schemas.py
argus_py/api/routes/: config.py  events.py  health.py  projects.py  prompts.py  reports.py  tasks.py  ws.py
argus_py/api/schemas/: __init__.py  base.py  config.py  health.py  llm_trace.py  projects.py  prompt_preview.py  tasks.py
argus_py/api/static/: index.html
argus_py/blackbox/: __init__.py  _client.py  action_executor.py  evaluator.py  events.py  evidence.py  execution_loop.py  finalizer.py  llm_boundary.py  models.py  planner.py  prompts.py  recovery.py  runner.py
argus_py/browser/: __init__.py  actions.py  base.py  constants.py  errors.py  playwright_client.py  selectors.py  singleton.py  snapshot.py  url_validator.py
argus_py/browser/snapshot/: __init__.py  dom_eval.py  html_pipeline.py  meta.py  snapshot_dom.js
argus_py/cli/: _types.py  io.py  main.py  messages.py  utils.py
argus_py/cli/commands/: analyze.py  auth.py  browser.py  config.py  llm.py  run.py  serve.py
argus_py/config/: __init__.py  llm_settings.py  model_storage.py  models.py  server_settings.py  service.py  settings.py
argus_py/core/: __init__.py  cancellation.py  constants.py  crypto.py  enums.py  exceptions.py  ids.py  paths.py  utils.py
argus_py/execution/: __init__.py  runner.py
argus_py/infra/: __init__.py  db.py  events.py  queue.py  recovery.py  temp_cleanup.py  worker.py
argus_py/infra/migrations/: __init__.py
argus_py/llm/: __init__.py  client.py  models.py  parser.py  prompts.py  providers.py  resolver.py  retry.py  url_guard.py
argus_py/llm/prompts/: blackbox_evaluator.md  blackbox_planner.md  llm_connection_check.md
argus_py/observability/: __init__.py  aspect.py  audit.py  context.py  debug_bundle.py  events.py  llm_trace.py  llm_trace_writer.py  logger.py  middleware.py  redaction.py  trace_index.py  trace_reader.py
argus_py/project/: __init__.py  models.py  service.py  storage.py
argus_py/redaction/: __init__.py  core.py  helpers.py  patterns.py
argus_py/report/: __init__.py  generator.py  html_report.py  json_report.py  models.py  serializer.py
argus_py/report/templates/: base.html.j2  blackbox_report.html.j2  whitebox_report.html.j2
argus_py/runtime/: __init__.py  container.py
argus_py/task/: __init__.py  _base.py  application.py  event.py  lifecycle.py  log.py  models.py  policies.py  query.py  read.py  runner.py  service.py  status.py  storage.py  strategy.py
argus_py/task/repositories/: event_repo.py  finding_repo.py  log_repo.py  mappers.py  task_repo.py
argus_py/utils/: __init__.py  casing.py  config.py  files.py  jsonx.py  logger.py  parse.py
argus_py/whitebox/: __init__.py  client.py  models.py  runner.py  source_resolver.py
config/: llm.env.example  logging.yaml  server.yaml
config/prompts/: blackbox_evaluator.md  blackbox_planner.md
docs/: architecture.md  cli.md  cli.zh.md  deployment.md  deployment.zh.md  follow-up-optimizations.md  guide.md  guide.zh.md  logging.md  phase2-e2e-test-cases.md
docs/optimizations/: follow-up-optimizations.md  regression-test-closed-loop-plan.md
docs/project-info/: OPTIMIZATION_ROADMAP.md  PROJECT_CONTEXT.md
examples/: README.md  task_001_screenshot.json  task_002_multistep.json
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  api.ts  auth.ts  element-plus-locale.d.ts  main.ts  params.ts  promptExtensions.ts  state.ts  styles.css  types.ts  ui.ts  utils.ts  views.ts  ws.ts
frontend/src/__tests__/: promptExtensions.spec.ts  utils.spec.ts
frontend/src/api/: client.ts  index.ts  openapi.gen.ts  types.ts
frontend/src/components/: AuthenticatedImage.vue  ModelTable.vue  ProjectTable.vue  SidebarMenu.vue  TaskDetail.vue  TaskTable.vue
frontend/src/composables/: useConsoleApp.ts  useDashboardStats.ts  useDebounceFn.ts  useDialog.ts  useMarkdown.ts  useModels.ts  useNavigation.ts  useProjects.ts  useRuntimeEvents.ts  useScrollSpy.ts  useTaskEvents.ts  useTaskList.ts  useTaskSelection.ts  (+2 more)
java_analyzer/: .gitignore  Dockerfile  README.md  pom.xml
outputs/traces/: phase1-check-task.jsonl
scripts/: README.md  backup_db.py  cleanup_outputs.py  codegen.mjs  dev.mjs  export_openapi.py  pre-commit-check-json.py  pre-commit-check-yaml.py  pre-commit-detect-private-key.py  pre-commit-eof-fixer.py  pre-commit-large-files.py  pre-commit-merge-conflict.py  pre-commit-sensitive.py  pre-commit-trailing-whitespace.py
tests/: conftest.py
tests/e2e/: __init__.py  test_platform_contract.py  test_playwright_smoke.py
tests/helpers/: factories.py
tests/integration/: __init__.py  test_platform_contract.py  test_whitebox_runner.py
tests/unit/: test_action_executor.py  test_agent_planner.py  test_api_contract_asgi.py  test_app_lifespan.py  test_audit_payload.py  test_auth_token.py  test_browser_selectors.py  test_browser_singleton.py  test_browser_snapshot.py  test_cli_run.py  test_context_thread.py  test_crypto.py  test_dashboard_stats.py  test_db_pool.py  test_env_example.py  test_event_bus.py  test_execution_loop.py  test_llm_boundary_prompt_extensions.py  test_llm_client.py  test_llm_prompts.py  test_llm_trace.py  test_llm_trace_writer.py  test_llm_url_guard.py  test_middleware.py  test_migrations.py  test_model_config_ssrf.py  test_model_deserializer.py  test_ops_scripts.py  test_platform_boundaries.py  test_prompt_composition.py  test_prompt_preview_api.py  test_rate_limit.py  test_recovery.py  test_recovery_policy.py  test_redaction.py  test_report_serializer.py  test_route_contracts.py  test_serve_worker_guard.py  test_source_resolver.py  test_task_models.py  (+6 more)
(+174 files in other folders)
