[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "AI Native Test Platform - Every bug has nowhere to hide."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WeiHan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "cryptography>=42.0,<44.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    # ruff 负责 format + lint + import 排序，替代原先的 black + isort。
    "ruff>=0.6,<1.0",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
argus = "argus_py.cli.main:main"

[tool.setuptools.packages.find]
include = ["argus_py*"]

[tool.setuptools.package-data]
"argus_py.report" = ["templates/*.j2"]
"argus_py.llm" = ["prompts/*.md"]
"argus_py.api" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["argus_py", "tests"]
# 排除：编辑器/构建/前端打包产物。frontend 由 ESLint 负责，不进 Python lint。
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "argus_py/api/static",
    "frontend",
]

[tool.ruff.lint]
# 规则选取原则：ruff 统一承担 format + lint + import 排序，不再依赖 black/isort。
# - E/W：pycodestyle 错误与告警（绝大多数风格问题由 ruff format 抹平，仅留语义类）
# - F：pyflakes（未使用 import / 未定义变量等真实 bug）
# - B：flake8-bugbear（可变默认参数、循环引用陷阱等常见 bug 模式）
# - PT：pytest 风格规范（assert 形式、fixture 使用）
# - I：isort import 排序（替换原先的 isort hook）
select = ["E", "W", "F", "B", "PT", "I"]
ignore = [
    "E501",  # 行长度由 ruff format 接管
    "B008",  # FastAPI Depends() / Query() 在函数默认参数中是合法用法
    "B904",  # raise X from exc 在已有大量直接 raise 的兼容代码里渐进推进
    "PT011", # pytest.raises(Exception) 不强制要求 match=
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许：B011（assert False）、PT004（fixture 命名）等测试惯例
"tests/**" = [
    "E402",  # 局部 import 用于隔离测试环境
    "B011",
]
# 路由函数名 test_model_config 形式上以 test_ 开头，被 ruff 误识为 pytest fn；
# 实际为 FastAPI 路由处理器，PT028 不适用。统一对 routes 目录关闭。
"argus_py/api/routes/**" = ["PT028"]
# 旧脚本允许 print
"scripts/**" = ["T201"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "argus_py.api.*",
    "argus_py.cli.*",
    "argus_py.core.*",
    "argus_py.llm.*",
    "argus_py.observability.*",
    "argus_py.report.*",
    "argus_py.task.*",
    "argus_py.utils.*",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "argus_py.cli.commands.config"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-m", "not slow"]
markers = [
    "slow: 耗时 >1s 的测试（全栈集成），默认跳过，只在 CI 或显式指定时运行。",
    "integration: 跨模块边界的集成测试（DB + API、多服务协作等）。",
]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true
